<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/place_image"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:contentDescription="@string/place_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/bg_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_image"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="@color/color_text_primary"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/guideline_top"
            tools:text="Grand Canyon" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/location_description"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/tv_country"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/tv_country" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/text_color_secondary"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="Arizona" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/currency"
            android:textColor="@color/accent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_price"
            app:layout_constraintEnd_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:textColor="@color/primary"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/guideline_top"
            tools:text="149" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_secondary"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/tv_price"
            android:text="@string/per_person" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_color_secondary"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_country"
            tools:maxLines="5"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:contentDescription="@string/social_description"
            android:src="@drawable/social_bar"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/rating_description"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rate"
            app:layout_constraintEnd_toStartOf="@+id/tv_rate"
            app:layout_constraintTop_toTopOf="@+id/tv_rate" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/color_text_primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:text="4.3" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/map_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:clipToPadding="false"
            app:cardCornerRadius="@dimen/corner_radius_large"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:strokeWidth="0dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="match_parent"
                android:focusable="true" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>